--- a/src/app/pages/commits-page/commits-page.component.scss
+++ b/src/app/pages/commits-page/commits-page.component.scss
@@ -9,6 +9,10 @@
         color: white;
         position: fixed;
         width: 100%;
+
+        h3 {
+          color: white;
+        }
       
         .leftHeader {
           flex: 1;
@@ -28,7 +32,7 @@
       
       .sidebar {
         grid-area: sidebar;
-        background-color: #D4E4BC;
+        background-color: #ebebeb;
         display: flex;
         flex-direction: column;
         width: 400px;
@@ -43,6 +47,7 @@
         height: calc(100vh - 60px); 
         width: calc(100% - 400px);
         float: right;
+        margin-top: 60px;
       }
       
 }
