added password field

--- a/src/app/pages/commits-page/commits-page.component.html
+++ b/src/app/pages/commits-page/commits-page.component.html
@@ -5,7 +5,7 @@
           routerLink="/"><</button>
     </div>
     <div class="centerHeader">
-        <h3>Repository Name</h3>
+        <h3>{{ repo.username }}/{{ repo.reponame }}</h3>
     </div>   
     <div class="rightHeader"></div>
   </header>
