--- a/src/app/pages/search-page/search-page.component.scss
+++ b/src/app/pages/search-page/search-page.component.scss
@@ -15,4 +15,10 @@
             padding: 10px;
         }
     }
+    .searchForm__private{
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 20px;
+        font-size: .8em;
+    }
 }
