--- a/src/app/pages/search-page/search-page.component.scss
+++ b/src/app/pages/search-page/search-page.component.scss
@@ -1,4 +1,7 @@
 .searchPage {
+    background: rgb(238,174,238);
+    background: linear-gradient(187deg, rgba(238,174,238,1) 0%, rgba(148,187,233,1) 100%);
+    
     .content {
         display: flex;
         justify-content: center;
