--- a/src/app/pages/commits-page/commits-page.component.scss
+++ b/src/app/pages/commits-page/commits-page.component.scss
@@ -5,7 +5,8 @@
         justify-content: space-between;
         align-items: center;
         height: 60px;
-        background-color: #96ACB7;
+        background: rgb(238,174,238);
+        background: linear-gradient(187deg, rgba(238,174,238,1) 0%, rgba(148,187,233,1) 100%);
         color: white;
         position: fixed;
         width: 100%;
